--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lesson-3</title>
     <link rel="stylesheet" href="./output.css">
+    <link rel="stylesheet" href="./p.css">
 </head>
 <body>
-    
+    <div class="flex justify-between items-center max-w-[1200px] m-auto p-[20px]">
+        <img src="./img/Logo.svg" alt="">
+        <div class="flex justify-between items-center gap-[100px]">
+            <div class="hidden lg:flex justify-between items-center gap-[40px]">
+                <p>CONTACT</p>
+                <p>TESTIMONIALS</p>
+                <p>ABOUT</p>
+                <p>TERMS</p>
+            </div>
+            <img src="./img/Group 27.svg" alt="">
+            
+        </div>
+    </div>
 </body>
 </html>
