--- a/src/index.html
+++ b/src/index.html
@@ -43,10 +43,29 @@
             </div>
         </div>
 
-        <div class="lg:[80%]">
+        <div class="lg:[80%] p-[20px]">
             <img src="./img/Hero Image (1).png" alt="">
         </div>
         
+    </div>
+
+    <div class="bg-blue-200">
+        <div class="max-w-[1200px] block lg:flex justify-between items-center m-auto pt-[5%]">
+            <div class="lg:w-[50%]">
+                <h3 class="text-[30] lg:text[45px]">Why do we help with legalization?</h3>
+                <p class="mt-[30px]">We are here for UMKM in Indonesia to carry out the legalization process, which is sometimes complicated.</p>
+            </div>
+            <div class="flex justify-between items-center">
+                <div>
+                    <img src="./img/Feature (1).png" alt="" >
+                    <img src="./img/Feature (1).png" alt="">
+                </div>
+                <div>
+                    <img src="./img/Feature (1).png" alt="">
+                    <img src="./img/Feature (1).png" alt="">
+                </div>
+            </div>
+        </div>
     </div>
 
 
